<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Introducción -->
    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:padding="@dimen/padding_regular"
        android:textSize="@dimen/text_heading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Elegir un postre -->
    <TextView
        android:id="@+id/choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:text="@string/choose_a_dessert"
        app:layout_constraintTop_toBottomOf="@id/textintro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Imagen del Donut -->
    <ImageView
        android:id="@+id/donut"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:padding="@dimen/padding_regular"
        android:contentDescription="@string/donuts"
        android:src="@drawable/donut_circle"
        app:layout_constraintTop_toBottomOf="@id/choose_dessert"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="showDonutOrder"/>

    <!-- Descripción del Donut -->
    <TextView
        android:id="@+id/donut_description"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/donuts"
        android:padding="@dimen/padding_wide"
        app:layout_constraintTop_toTopOf="@id/donut"
        app:layout_constraintStart_toEndOf="@id/donut" />

    <!-- Imagen del Ice Cream Sandwich -->
    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:padding="@dimen/padding_regular"
        android:contentDescription="@string/ice_cream_sandwiches"
        android:src="@drawable/icecream_circle"
        app:layout_constraintTop_toBottomOf="@id/donut"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="showIceCreamOrder"/>

    <!-- Descripción del Ice Cream Sandwich -->
    <TextView
        android:id="@+id/ice_cream_description"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/ice_cream_sandwiches"
        android:padding="@dimen/padding_wide"
        app:layout_constraintTop_toTopOf="@id/ice_cream"
        app:layout_constraintStart_toEndOf="@id/ice_cream" />

    <!-- Imagen del FroYo -->
    <ImageView
        android:id="@+id/froyo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:padding="@dimen/padding_regular"
        android:contentDescription="@string/froyo"
        android:src="@drawable/froyo_circle"
        app:layout_constraintTop_toBottomOf="@id/ice_cream"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="showFroyoOrder"/>

    <!-- Descripción del FroYo -->
    <TextView
        android:id="@+id/froyo_description"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/froyo"
        android:padding="@dimen/padding_wide"
        app:layout_constraintTop_toTopOf="@id/froyo"
        app:layout_constraintStart_toEndOf="@id/froyo" />

    <!-- Botón Redondo con Imagen -->
    <ImageButton
        android:id="@+id/round_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/baseline_shopping_cart_24"
        android:background="@drawable/circle_background"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:onClick="openOrderActivityFromButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>
